# crypto-stock-platform

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DISASTER_RECOVERY.md  LICENSE  MONITORING.md  PROJECT_STATUS.md  README.md  SECURITY.md  TROUBLESHOOTING.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.fixes/: README.md  api-service-fix-report.md  api-service-fix.md  binance-collector-fix.md  processor-service-fix.md  yahoo-collector-fix.md
.kiro/specs/crypto-stock-platform/: design.md  requirements.md  tasks.md
.projectDefinition/: design.md  requirements.md  tasks.md
ai/: __init__.py  feature_store.py
ai/backtesting/: backtester.py
api/: __init__.py  alert_manager.py  auth.py  main.py  middleware.py  rate_limiter.py  websocket.py
api/v1/: __init__.py  alert_routes.py  auth_routes.py  data_routes.py  export_routes.py
collectors/: README.md  __init__.py  __main__.py  __main__polygon.py  alpaca_collector.py  base_collector.py  binance_collector.py  circuit_breaker.py  polygon_collector.py  yahoo_collector.py
config/: README.md  config_manager.py  exchanges.yaml  redis.conf  settings.py  symbols.yaml
docker/: Dockerfile.api  Dockerfile.collector  Dockerfile.frontend  Dockerfile.processor  entrypoint-collector.sh  entrypoint-processor.sh  nginx.conf
docs/: ARCHITECTURE.md  ML_FEATURES.md  REDIS_DATA_STRUCTURES.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ConnectionStatus.tsx
frontend/src/hooks/: .gitkeep  useMockData.ts  useWebSocket.ts
monitoring/: README.md  logger.py  metrics.py  prometheus.yml
monitoring/grafana/: README.md
processors/: README.md  __init__.py  arbitrage_detector.py  bar_builder.py  data_quality.py  indicators.py  main.py
scripts/: backfill.py  backfill_polygon_history.py  init_db.py  restore_test.py  run_integration_tests.sh  setup.sh  smoke_test.sh  start_all.sh  upload_backup.py  verify_backup.py
storage/: __init__.py  models.py  redis_cache.py  symbol_manager.py  timescale_manager.py
storage/migrations/: 000_init_extensions.sql  001_create_symbols_table.sql  002_create_candles_table.sql  003_create_data_quality_metrics_table.sql  003_create_indicators_table.sql  004_create_ml_features_table.sql  005_create_alerts_table.sql  006_create_data_quality_table.sql  007_create_audit_log_table.sql
tests/: README.md  __init__.py  conftest.py  requirements.txt
tests/integration/: __init__.py  test_data_flow.py
tests/unit/: test_bar_builder.py  test_circuit_breaker.py  test_data_quality.py  test_indicators.py  test_rate_limiter.py
(+30 files in other folders)
